# utxo-rust

./: Cargo.toml  README.md
crates/blockchain/: Cargo.toml
crates/blockchain/src/: block.rs  blockchain.rs  lib.rs  mempool.rs  processing.rs
crates/common/: Cargo.toml
crates/common/src/: transaction.rs
crates/wallet/: Cargo.toml
crates/wallet/src/: lib.rs  wallet.rs
src/: lib.rs  main.rs  minting.rs  processing.rs  simulation.rs  transaction.rs  wallet.rs
