[workspace]
members = [
    "crates/blockchain",
    "crates/wallet",
    "crates/common",
]

[package]
name = "utxo-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
blockchain = { path = "crates/blockchain" }
wallet = { path = "crates/wallet" }
common = { path = "crates/common" }
rand = "0.8.5"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
bincode = "1.3.3"
sha2 = "0.10.2"
chrono = "0.4.19"
env_logger = "0.9.0"
log = "0.4.14"
tokio = { version = "1.12.0", features = ["full"] }
signature = "2.0.0"
ed25519-dalek = "2.0.0"
ed25519 = "2.0.0"
hex = "0.4.3"
uuid = { version = "1.0.0", features = ["v4"] }
ring = "0.17.8"
